src/test/ui/span/coerce-suggestions.stderr
error[E0308]: mismatched types
  --> $DIR/coerce-suggestions.rs:7:20
   |
LL |     let x: usize = String::new();
   |            -----   ^^^^^^^^^^^^^ expected `usize`, found struct `String`
   |            |
   |            expected due to this

error[E0308]: mismatched types
  --> $DIR/coerce-suggestions.rs:9:19
   |
LL |     let x: &str = String::new();
   |            ----   ^^^^^^^^^^^^^
   |            |      |
   |            |      expected `&str`, found struct `String`
   |            |      help: consider borrowing here: `&String::new()`
   |            expected due to this

error[E0308]: arguments to this function are incorrect
  --> $DIR/coerce-suggestions.rs:12:5
   |
LL |     test(&y);
   |     ^^^^^--^
   |          |
   |          expected `&mut String`, found `&String`
   |
note: function defined here
  --> $DIR/coerce-suggestions.rs:3:4
   |
LL | fn test(_x: &mut String) {}
   |    ^^^^ ---------------
help: provide an argument of the correct type
   |
LL |     test({&mut String});
   |     ^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/coerce-suggestions.rs:14:5
   |
LL |     test2(&y);
   |     ^^^^^^--^
   |           |
   |           expected `&mut i32`, found `&String`
   |
note: function defined here
  --> $DIR/coerce-suggestions.rs:4:4
   |
LL | fn test2(_x: &mut i32) {}
   |    ^^^^^ ------------
help: provide an argument of the correct type
   |
LL |     test2({&mut i32});
   |     ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/coerce-suggestions.rs:17:9
   |
LL |     f = box f;
   |         ^^^^^
   |         |
   |         cyclic type of infinite size
   |         help: try using a conversion method: `(box f).to_string()`

error[E0308]: mismatched types
  --> $DIR/coerce-suggestions.rs:21:9
   |
LL |     s = format!("foo");
   |         ^^^^^^^^^^^^^^ expected `&mut String`, found struct `String`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
